exercices/ch3/ch3_2.3/manifests/ping-pong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
